Fix tooltip alignment

--- a/src/components/screens/bookmarks/list/list.css
+++ b/src/components/screens/bookmarks/list/list.css
@@ -146,3 +146,7 @@
 .hide {
   visibility: hidden;
 }
+
+.tooltipContainer {
+  right: -27px !important;
+}
